--- a/tc10_latest.tex
+++ b/tc10_latest.tex
@@ -1031,29 +1031,29 @@ The journey from TC 9.0 to TC 10.0 reflects the power of interdisciplinary colla
 \begin{thebibliography}{99}
     \bibitem{imaz2025} Imaz, A. (2025). Transformative Consciousness (TC) 9.0: A Resonant, Buildable Framework for Consciousness Emergence.
     
-    \bibitem{tononi2016} Tononi, G., Boly, M., Massimini, M., & Koch, C. (2016). Integrated information theory: from consciousness to its physical substrate. \emph{Nature Reviews Neuroscience}, 17(7), 450-461.
+    \bibitem{tononi2016} Tononi, G., Boly, M., Massimini, M., \& Koch, C. (2016). Integrated information theory: from consciousness to its physical substrate. \emph{Nature Reviews Neuroscience}, 17(7), 450-461.
     
-    \bibitem{dehaene2011} Dehaene, S., & Changeux, J. P. (2011). Experimental and theoretical approaches to conscious processing. \emph{Neuron}, 70(2), 200-227.
+    \bibitem{dehaene2011} Dehaene, S., \& Changeux, J. P. (2011). Experimental and theoretical approaches to conscious processing. \emph{Neuron}, 70(2), 200-227.
     
     \bibitem{bousso2002} Bousso, R. (2002). The holographic principle. \emph{Reviews of Modern Physics}, 74(3), 825-874.
     
-    \bibitem{hameroff2014} Hameroff, S., & Penrose, R. (2014). Consciousness in the universe: A review of the 'Orch OR' theory. \emph{Physics of Life Reviews}, 11(1), 39-78.
+    \bibitem{hameroff2014} Hameroff, S., \& Penrose, R. (2014). Consciousness in the universe: A review of the 'Orch OR' theory. \emph{Physics of Life Reviews}, 11(1), 39-78.
     
     \bibitem{tegmark2016} Tegmark, M. (2016). Improved measures of integrated information. \emph{PLoS Computational Biology}, 12(11), e1005123.
     
     \bibitem{chalmers1995} Chalmers, D. J. (1995). Facing up to the problem of consciousness. \emph{Journal of Consciousness Studies}, 2(3), 200-219.
     
-    \bibitem{kelz2019} Kelz, M. B., & Mashour, G. A. (2019). The biology of general anesthesia from paramecium to primate. \emph{Current Biology}, 29(22), R1199-R1210.
+    \bibitem{kelz2019} Kelz, M. B., \& Mashour, G. A. (2019). The biology of general anesthesia from paramecium to primate. \emph{Current Biology}, 29(22), R1199-R1210.
     
-    \bibitem{birch2020} Birch, J., Ginsburg, S., & Jablonka, E. (2020). Unlimited associative learning and the origins of consciousness: a primer and some predictions. \emph{Biology & Philosophy}, 35(6), 1-23.
+    \bibitem{birch2020} Birch, J., Ginsburg, S., \& Jablonka, E. (2020). Unlimited associative learning and the origins of consciousness: a primer and some predictions. \emph{Biology \& Philosophy}, 35(6), 1-23.
     
     \bibitem{chialvo2010} Chialvo, D. R. (2010). Emergent complex neural dynamics. \emph{Nature Physics}, 6(10), 744-750.
     
-    \bibitem{lambert2013} Lambert, N., Chen, Y. N., Cheng, Y. C., Li, C. M., Chen, G. Y., & Nori, F. (2013). Quantum biology. \emph{Nature Physics}, 9(1), 10-18.
+    \bibitem{lambert2013} Lambert, N., Chen, Y. N., Cheng, Y. C., Li, C. M., Chen, G. Y., \& Nori, F. (2013). Quantum biology. \emph{Nature Physics}, 9(1), 10-18.
     
-    \bibitem{rensing1993} Rensing, L., Meyer-Grahle, U., & Ruoff, P. (1993). Biological timing and the clock metaphor: oscillatory and hourglass mechanisms. \emph{Chronobiology International}, 10(3), 173-192.
+    \bibitem{rensing1993} Rensing, L., Meyer-Grahle, U., \& Ruoff, P. (1993). Biological timing and the clock metaphor: oscillatory and hourglass mechanisms. \emph{Chronobiology International}, 10(3), 173-192.
     
-    \bibitem{chennu2014} Chennu, S., Finoia, P., Kamau, E., Allanson, J., Williams, G. B., Monti, M. M., Noreika, V., Arnatkeviciute, A., Canales-Johnson, A., Olivares, F., & Cabezas-Soto, D. (2014). Spectral signatures of reorganised brain networks in disorders of consciousness. \emph{PLoS Computational Biology}, 10(10), e1003887.
+    \bibitem{chennu2014} Chennu, S., Finoia, P., Kamau, E., Allanson, J., Williams, G. B., Monti, M. M., Noreika, V., Arnatkeviciute, A., Canales-Johnson, A., Olivares, F., \& Cabezas-Soto, D. (2014). Spectral signatures of reorganised brain networks in disorders of consciousness. \emph{PLoS Computational Biology}, 10(10), e1003887.
 \end{thebibliography}
 
 \end{document}
